--- a/crud/templates/attachments/sidebar.html
+++ b/crud/templates/attachments/sidebar.html
@@ -5,7 +5,7 @@
 
 <!-- Sidebar Drawer -->
 <div id="sidebar"
-     class="fixed inset-y-0 left-0 w-64 bg-white shadow-lg z-40 transform -translate-x-full transition-transform duration-300 sm:relative sm:translate-x-0 sm:w-64 sm:block">
+     class="fixed inset-y-0 left-0 w-64 bg-white shadow-lg z-50 transform h-screen overflow-y-auto sm:overflow-y-visible sm:h-auto sm:overflow-y-auto -translate-x-full transition-transform duration-300 sm:relative sm:translate-x-0 sm:w-64 sm:block">
     <aside class="w-64 bg-blue-600 shadow-lg min-h-screen flex flex-col justify-between">
         <div class="flex flex-col p-6 justify-between">
             <div>
